# swift-java

./: .editorconfig  .gitignore  .licenseignore  .spi.yml  .swift-format  .unacceptablelanguageignore  CONTRIBUTING.md  DESIGN.md  HOW_TO_RUN.md  Makefile  NOTICE.txt  Package.resolved  Package.swift  README.md  USER_GUIDE.md  WIP.md  build.gradle.kts  default.profraw  gradle.properties  settings.gradle  settings.gradle.kts
.github/: CODEOWNERS
.metals/: metals.lock.db  metals.mv.db
.sourcekit-lsp/: config.json
Benchmarks/: Package.swift
BuildLogic/: .gitignore  build.gradle.kts  settings.gradle.kts
JavaKit/: build.gradle
JavaSwiftKitDemo/: build.gradle.kts
Snippets/: ArraysJavaFFM.java  ArraysJavaJNI.java  ArraysSwift.swift.symlink  AsyncJavaJNI.java  AsyncSwift.swift.symlink  ClassesJavaFFM.java  ClassesJavaJNI.java  ClosuresJavaJNI.java  ClosuresSwift.swift.symlink  DataJavaFFM.java  EnumsJavaJNI.java  EnumsSwift.swift.symlink  EscapingClosuresJavaJNI.java  EscapingClosuresSwift.swift.symlink  FoundationURLJavaJNI.java  FoundationURLSwift.swift.symlink  GenericsJavaJNI.java  GenericsSwift.swift.symlink  JavaKitArraysJava.java  JavaKitArraysSwift.swift.symlink  SetsJavaJNI.java  (+33 more)
Sources/_SubprocessCShims/: CMakeLists.txt  platform_shims.c  process_shims.c
Sources/_SubprocessCShims/include/: CFUniCharBitmapData.h  CFUniCharBitmapData.inc.h  _CShimsMacros.h  _CShimsTargetConditionals.h  _CStdlib.h  _SubprocessCShims.h  bplist_shims.h  filemanager_shims.h  io_shims.h  module.modulemap  platform_shims.h  process_shims.h  string_shims.h  target_conditionals.h
(+1328 files in other folders)
